Fix Splash Screen and add Image

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FF5722</color>
-    <color name="colorPrimaryDark">#FF5722</color>
+    <color name="colorPrimary">#da251c</color>
+    <color name="colorPrimaryDark">#da251c</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="swipe_color_1">#4CAF50</color>
@@ -25,7 +25,7 @@
     <color name="color_trail_text">#102027</color>
     <color name="color_date_text">#a4a4a4</color>
 
-    <color name="color_app_bar_text">#FF5722</color>
+    <color name="color_app_bar_text">#da251c</color>
     <color name="color_tab_text">#a7c0cd</color>
 
     <color name="nav_bar_start">#7db1ec</color>
