--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,10 +31,12 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/login_form"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="22dp"
         android:text="Versi 1.0"
-        android:textSize="20sp" />
+        android:textSize="13sp" />
 
     <ScrollView
         android:id="@+id/login_form"
