--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="swipe_color_1">#4CAF50</color>
-    <color name="swipe_color_2">#03A9F4</color>
+    <color name="swipe_color_2">#0347f4</color>
     <color name="swipe_color_3">#FFC107</color>
     <color name="swipe_color_4">#FF5722</color>
 
