--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -102,6 +102,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:background="#21449b"
+                android:onClick="signInWithLinkedIn"
                 android:text="Sign In LinkedIn"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
