--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,4 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:title="@string/action_settings" />
+    <item
+        android:id="@+id/logout"
+        android:title="Logout"/>
 </menu>
