--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="266dp"
+        android:layout_height="350dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="188dp">
@@ -87,23 +87,40 @@
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+            <TextView
+                android:id="@+id/Tvbelum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:text="Belum Punya akun? "/>
+
             <TextView
                 android:id="@+id/TvDaftar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:clickable="true"
+                android:focusable="true"
                 android:gravity="center"
-                android:text="Belum Punya akun? daftar disini" />
+                android:text="daftar disini"
+                android:textColor="@color/colorPrimaryDark" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/linkedinbutton"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="40dp"
                 android:background="#21449b"
                 android:onClick="signInWithLinkedIn"
-                android:text="Sign In LinkedIn"
+                android:text="Sign in with LinkedIn"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
         </LinearLayout>
